fix: image admin render
